# ECHO

./: .gitignore  README.md  README_EN.md  package-lock.json  package.json  package.nix  tsconfig.json  vitest.config.ts
docs/: CHANGELOG_2026-05-25_2026-05-27.md  ECHO_NEXT_EQ.md  ECHO_NEXT_LIBRARY_CORE.md  ECHO_NEXT_LIBRARY_SMOKE_TEST.md  ECHO_NEXT_NATIVE_WORKERS.md  ECHO_NEXT_PLUGINS.md  ECHO_NEXT_ROADMAP.md  ECHO_NEXT_RULES.md  USER_GUIDE.md  theme-contract.md
docs/plugin-sdk/: echo-plugin.d.ts
electron-app/tools/: README.md
examples/: echo.final-theme-unlock.echo  osu.downloader.echo
examples/wallpaper-engine/: echo-bridge-example.js
native/audio-engine/: EqProcessor.cpp  EqProcessor.h
native/audio-host/: CMakeLists.txt
native/audio-host/src/: main.cpp
native/audio-host/tests/: audio_engine_tests.cpp
native/smtc-host/: CMakeLists.txt
native/smtc-host/src/: main.cpp
scripts/: after-pack-integrity.mjs  benchmark-library.mjs  benchmark-library.test.mjs  build-audio-host.mjs  build-smtc-host.mjs  check-encoding.mjs  check-theme-colors.mjs  smoke-audio-host.mjs  smoke-smtc-host.mjs  test-audio-engine.mjs  theme-color-baseline.json
src/main/: index.ts
src/main/accounts/: AccountLoginWindow.ts  AccountService.test.ts  AccountService.ts
src/main/app/: appSettings.test.ts  appSettings.ts  autoUpdater.ts  createMainWindow.test.ts  createMainWindow.ts  dataProtection.test.ts  dataProtection.ts  desktopLyricsWindow.ts  devApiServer.ts  (+11 more)
src/preload/: apiTypes.ts  index.test.ts  index.ts
src/renderer/: index.html  main.tsx
src/types/: kuroshiro.d.ts
(+286 files in other folders)
